<resources>
    <string name="app_name">Tokopadian</string>
    <string name="things_name">Nama Barang</string>
    <string name="seller_name">Nama Penjual</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="price">Rp150.000</string>
    <string name="myName">Dian Saputra</string>
    <string name="Email">dayensptr@gmail.com</string>
    <string-array name="data_seller">
        <item>Fantech Official Store</item>
        <item>Logitech Official Store</item>
        <item>Sage Official Store</item>
        <item>MOFii Official Store</item>
        <item>Razer Official Store</item>
        <item>Fantech Official Store</item>
        <item>Narwhal</item>
        <item>Gamen Official Store</item>
        <item>Koorui Official Flagship Store</item>
        <item>Urban Republic Official Store</item>
    </string-array>
    <string-array name="data_name">
        <item>Fantech THOR II X16 Mouse Gaming PIXART 3519</item>
        <item>Logitech G PRO X 2 LIGHTSPEED Headset Gaming Wireless Bluetooth -White</item>
        <item>Gaming Chair bangku game Kursi 180 derajat SG-818</item>
        <item>MOFii Gaming Mouse Wireless 2.4g RGB Light Rechargeable 1600 DPI P6</item>
        <item>Razer DeathAdder V2 X HyperSpeed - Wireless Gaming Mouse</item>
        <item>Fantech REVOLVER II WGP12 Wireless Gaming Controller</item>
        <item>Gaming Mouse Pad XL Desk Mat 800 x 400 mm Anime Olevo RO 63</item>
        <item>GAMEN Titan V All-New Titan Series Keyboard Gaming Mechanical Blue Sw</item>
        <item>KOORUI 24E3 24 inch FHD GAMING MONITOR 165Hz 1ms IPS</item>
        <item>Sony PlayStation 5 Slim Digital</item>
    </string-array>
    <string-array name="data_rating">
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9734;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9734;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9734;</item>
        <item>&#9733;&#9733;&#9733;&#9733;&#9733;</item>
    </string-array>
    <string-array name="data_price">
        <item>Rp120.000</item>
        <item>Rp3.129.000</item>
        <item>Rp1.688.000</item>
        <item>Rp129.900</item>
        <item>Rp649.000</item>
        <item>Rp275.000</item>
        <item>Rp24.900</item>
        <item>Rp229.000</item>
        <item>Rp1.680.000</item>
        <item>Rp8.199.000</item>
    </string-array>
</resources>