<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/things_name"
            card_view:civ_border_color="#FF000000"
            card_view:civ_border_width="1dp"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_description"
            card_view:layout_constraintEnd_toStartOf="@id/tv_item_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintVertical_chainStyle="packed"
            card_view:shapeAppearanceOverlay="@style/RoundedSquare"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_seller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/seller_name"
            android:textColor="#1F7A8C"
            android:textSize="12sp"
            android:maxLines="1"
            card_view:layout_constraintBottom_toTopOf="@id/tv_price"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@id/tv_price"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="&#9733;&#9733;&#9733;&#9733;&#9734;"
            android:textColor="#fcd703"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toTopOf="@id/tv_item_description"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@id/tv_price"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_price"
            card_view:layout_constraintVertical_bias="0.060000002"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:maxLines="2"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_seller"
            tools:text="@string/things_name" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:rotationX="0"
            android:text="@string/price"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toTopOf="@id/tv_rating"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_seller"
            card_view:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="12sp"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_rating"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
